--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     align-items: center;
     justify-content: space-around;
     width: 1000px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .card {
